--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Django==3.1.7
 django-ckeditor==6.0.0
 django-cloudinary-storage==0.3.0
 django-js-asset==1.2.2
+django-paypal==1.1
 django-timezone-field==4.1.1
 gunicorn==20.0.4
 idna==2.10
@@ -26,12 +27,15 @@ prompt-toolkit==3.0.17
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pycparser==2.20
+pycryptodome==3.10.1
 PyJWT==2.0.1
+PySocks==1.7.1
 python-crontab==2.5.1
 python-dateutil==2.8.1
 python-decouple==3.4
 python3-openid==3.2.0
 pytz==2021.1
+razorpay==1.2.0
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.15.0
@@ -39,6 +43,7 @@ social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
 toml==0.10.2
+tweepy==3.10.0
 urllib3==1.26.3
 vine==5.0.0
 wcwidth==0.2.5
