--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.0.5
+APScheduler==3.7.0
 asgiref==3.3.1
 autopep8==1.5.5
 billiard==3.6.3.0
@@ -13,10 +14,13 @@ cloudinary==1.24.0
 cryptography==3.4.6
 defusedxml==0.7.1
 Django==3.1.7
+django-apscheduler==0.5.2
 django-ckeditor==6.0.0
 django-cloudinary-storage==0.3.0
+django-common-helpers==0.9.2
 django-js-asset==1.2.2
 django-paypal==1.1
+django-redis==4.12.1
 django-timezone-field==4.1.1
 gunicorn==20.0.4
 idna==2.10
@@ -36,6 +40,7 @@ python-decouple==3.4
 python3-openid==3.2.0
 pytz==2021.1
 razorpay==1.2.0
+redis==3.5.3
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.15.0
@@ -44,7 +49,8 @@ social-auth-core==4.1.0
 sqlparse==0.4.1
 toml==0.10.2
 tweepy==3.10.0
-urllib3==1.26.3
+tzlocal==2.1
+urllib3==1.26.4
 vine==5.0.0
 wcwidth==0.2.5
 whitenoise==5.2.0
