Add Google Sign In

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ razorpay = "*"
 django-redis = "*"
 apscheduler = "*"
 django-apscheduler = "*"
+social-auth-app-django = "*"
 
 [dev-packages]
 autopep8 = "*"
