--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 amqp==5.0.5
 APScheduler==3.7.0
 asgiref==3.3.1
+atomicwrites==1.4.0
+attrs==20.3.0
 autopep8==1.5.5
 billiard==3.6.3.0
 certifi==2020.12.5
@@ -11,9 +13,12 @@ click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
 cloudinary==1.24.0
+colorama==0.4.4
 cryptography==3.4.6
+decorator==4.4.2
 defusedxml==0.7.1
 Django==3.1.7
+django-allauth==0.44.0
 django-apscheduler==0.5.2
 django-ckeditor==6.0.0
 django-cloudinary-storage==0.3.0
@@ -22,18 +27,32 @@ django-js-asset==1.2.2
 django-paypal==1.1
 django-redis==4.12.1
 django-timezone-field==4.1.1
+future==0.18.2
 gunicorn==20.0.4
+huepy==1.2.1
 idna==2.10
+imageio==2.9.0
+imageio-ffmpeg==0.4.3
+iniconfig==1.1.1
 kombu==5.0.2
+mock==4.0.3
+moviepy==1.0.3
+numpy==1.20.1
 oauthlib==3.1.0
+packaging==20.9
 Pillow==8.1.2
+pluggy==0.13.1
+proglog==0.1.9
 prompt-toolkit==3.0.17
 psycopg2-binary==2.8.6
+py==1.10.0
 pycodestyle==2.6.0
 pycparser==2.20
 pycryptodome==3.10.1
 PyJWT==2.0.1
+pyparsing==2.4.7
 PySocks==1.7.1
+pytest==6.2.2
 python-crontab==2.5.1
 python-dateutil==2.8.1
 python-decouple==3.4
@@ -43,11 +62,15 @@ razorpay==1.2.0
 redis==3.5.3
 requests==2.25.1
 requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+responses==0.13.0
+schedule==1.0.0
 six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
 toml==0.10.2
+tqdm==4.59.0
 tweepy==3.10.0
 tzlocal==2.1
 urllib3==1.26.4
