--- a/samples/.env.save
+++ b/samples/.env.save
@@ -10,6 +10,8 @@ EMAIL_HOST_PASSWORD='password'
 CLOUD_NAME='cloudinary-cloud-name'
 API_KEY='cloudinary-api-key'
 API_SECRET='cloudinary-api-secret'
+GOOGLE_OAUTH_CLIENT_ID='google-key'
+GOOGLE_OAUTH_CLIENT_SECRET='google-secret'
 TWITTER_API_KEY='twitter-api-key'
 TWITTER_API_SECRET_KEY='twitter-api-secret-key'
 TWITTER_ACCESS_TOKEN='twitter-access-token'
