--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+aiohttp==3.7.4.post0
 amqp==5.0.5
 asgiref==3.3.1
+async-timeout==3.0.1
 atomicwrites==1.4.0
 attrs==20.3.0
 autopep8==1.5.5
 billiard==3.6.3.0
+celery==5.0.5
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -11,9 +14,9 @@ click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
-cloudinary==1.24.0
+cloudinary==1.25.0
 colorama==0.4.4
-cryptography==3.4.6
+cryptography==3.4.7
 decorator==4.4.2
 defusedxml==0.7.1
 Django==3.1.7
@@ -26,15 +29,17 @@ django-paypal==1.1
 django-redis==4.12.1
 django-timezone-field==4.1.1
 future==0.18.2
-gunicorn==20.0.4
+gunicorn==20.1.0
 huepy==1.2.1
 idna==2.10
 imageio==2.9.0
 imageio-ffmpeg==0.4.3
 iniconfig==1.1.1
 kombu==5.0.2
+maxminddb==2.0.3
 mock==4.0.3
 moviepy==1.0.3
+multidict==5.1.0
 numpy==1.20.1
 oauthlib==3.1.0
 packaging==20.9
@@ -70,8 +75,10 @@ sqlparse==0.4.1
 toml==0.10.2
 tqdm==4.59.0
 tweepy==3.10.0
+typing-extensions==3.7.4.3
 tzlocal==2.1
 urllib3==1.26.4
 vine==5.0.0
 wcwidth==0.2.5
 whitenoise==5.2.0
+yarl==1.6.3
