--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ async-timeout==3.0.1
 atomicwrites==1.4.0
 attrs==20.3.0
 autopep8==1.5.5
+beautifulsoup4==4.9.3
 billiard==3.6.3.0
 celery==5.0.5
 certifi==2020.12.5
@@ -17,6 +18,7 @@ click-repl==0.1.6
 cloudinary==1.25.0
 colorama==0.4.4
 cryptography==3.4.7
+cssselect==1.1.0
 decorator==4.4.2
 defusedxml==0.7.1
 Django==3.1.7
@@ -36,6 +38,8 @@ imageio==2.9.0
 imageio-ffmpeg==0.4.3
 iniconfig==1.1.1
 kombu==5.0.2
+lxml==4.6.3
+markdown2==2.4.0
 maxminddb==2.0.3
 mock==4.0.3
 moviepy==1.0.3
@@ -54,6 +58,7 @@ pycparser==2.20
 pycryptodome==3.10.1
 PyJWT==2.0.1
 pyparsing==2.4.7
+pyquery==1.4.3
 PySocks==1.7.1
 pytest==6.2.2
 python-crontab==2.5.1
@@ -62,6 +67,7 @@ python-decouple==3.4
 python3-openid==3.2.0
 pytz==2021.1
 razorpay==1.2.0
+readtime==1.1.1
 redis==3.5.3
 requests==2.25.1
 requests-oauthlib==1.3.0
@@ -71,6 +77,7 @@ schedule==1.0.0
 six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
+soupsieve==2.2.1
 sqlparse==0.4.1
 toml==0.10.2
 tqdm==4.59.0
