--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 django = "*"
 python-decouple = "*"
 psycopg2-binary = "*"
-pillow = "*"
+pillow = ">=8.2.0"
 django-ckeditor = "*"
 django-cloudinary-storage = "*"
 gunicorn = "*"
