Fix Environment Vars

--- a/samples/.env.save
+++ b/samples/.env.save
@@ -21,3 +21,4 @@ PAYTM_MERCHANT_KEY='paytm-merchant-key'
 RAZORPAY_KEY_ID='rzp-key-id'
 RAZORPAY_KEY_SECRET='rzp-key-secret'
 REDIS_URL=redis://127.0.0.1:6379/1
+SHORTY_API_KEY='shorty-api-key'
