--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.7.4.post0
 amqp==5.0.5
-asgiref==3.4.1
+asgiref==3.5.0
 async-timeout==3.0.1
 atomicwrites==1.4.0
 attrs==20.3.0
@@ -11,25 +11,26 @@ celery==5.0.5
 certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
-charset-normalizer==2.0.9
+charset-normalizer==2.0.11
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
-cloudinary==1.28.0
+cloudinary==1.29.0
 colorama==0.4.4
 cryptography==36.0.1
 cssselect==1.1.0
 decorator==4.4.2
 defusedxml==0.7.1
-Django==3.2.10
+Deprecated==1.2.13
+Django==4.0.2
 django-allauth==0.44.0
 django-ckeditor==6.2.0
 django-cloudinary-storage==0.3.0
 django-common-helpers==0.9.2
 django-js-asset==1.2.2
 django-paypal==1.1
-django-redis==5.1.0
+django-redis==5.2.0
 django-timezone-field==4.1.1
 future==0.18.2
 gunicorn==20.1.0
@@ -46,48 +47,49 @@ mock==4.0.3
 moviepy==1.0.3
 multidict==5.1.0
 numpy==1.20.1
-oauthlib==3.1.1
-packaging==20.9
-Pillow==8.4.0
+oauthlib==3.2.0
+packaging==21.3
+Pillow==9.0.1
 pluggy==0.13.1
 proglog==0.1.9
 prompt-toolkit==3.0.17
-psycopg2-binary==2.9.2
+psycopg2-binary==2.9.3
 py==1.10.0
 pycodestyle==2.6.0
 pycparser==2.21
-pycryptodome==3.12.0
+pycryptodome==3.14.1
 PyJWT==2.3.0
-pyparsing==2.4.7
+pyparsing==3.0.7
 pyquery==1.4.3
 PySocks==1.7.1
 pytest==6.2.2
 python-crontab==2.5.1
 python-dateutil==2.8.1
-python-decouple==3.5
+python-decouple==3.6
 python3-openid==3.2.0
 pytz==2021.3
 razorpay==1.2.0
 readtime==1.1.1
-redis==3.5.3
-requests==2.26.0
-requests-oauthlib==1.3.0
+redis==4.1.2
+requests==2.27.1
+requests-oauthlib==1.3.1
 requests-toolbelt==0.9.1
 responses==0.13.0
 schedule==1.0.0
 six==1.16.0
 social-auth-app-django==5.0.0
-social-auth-core==4.1.0
+social-auth-core==4.2.0
 soupsieve==2.3.1
 sqlparse==0.4.2
 toml==0.10.2
 tqdm==4.59.0
-tweepy==4.4.0
+tweepy==4.5.0
 typing-extensions==3.7.4.3
 tzdata==2021.5
 tzlocal==2.1
-urllib3==1.26.7
+urllib3==1.26.8
 vine==5.0.0
 wcwidth==0.2.5
 whitenoise==5.3.0
+wrapt==1.13.3
 yarl==1.6.3
